--- a/Web-App-Backend/package.json
+++ b/Web-App-Backend/package.json
@@ -1,9 +1,9 @@
 {
   "name": "web-app-backend",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
