--- a/Web-App-Frontend/package.json
+++ b/Web-App-Frontend/package.json
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
     "sweetalert2": "^11.17.2"
   },
   "devDependencies": {
